--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve": "nuxt serve"
   },
   "dependencies": {
+    "frontmatter-markdown-loader": "^3.6.0",
     "nuxt": "^2.13.0"
   },
   "devDependencies": {}
