--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "frontmatter-markdown-loader": "^3.6.0",
     "nuxt": "^2.13.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2"
+  }
 }
