--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "frontmatter-markdown-loader": "^3.6.0",
+    "markdown-it": "^11.0.0",
+    "markdown-it-prism": "^2.0.5",
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
+    "github-markdown-css": "^4.0.0",
     "node-sass": "^4.14.1",
+    "prism-themes": "^1.4.0",
     "sass-loader": "^8.0.2"
   }
 }
