--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "devDependencies": {
     "github-markdown-css": "^4.0.0",
-    "node-sass": "^4.14.1",
     "prism-themes": "^1.4.0",
+    "sass": "^1.26.9",
     "sass-loader": "^8.0.2"
   }
 }
